<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePackageDetails">

    <EditText
        android:id="@+id/update_lodge_name"
        android:layout_width="@dimen/package_form_textBox_width"
        android:layout_height="@dimen/package_form_textBox_height"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_input_back"
        android:ems="10"
        android:hint="@string/package_label_resortName"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="23sp"
        android:theme="@style/text_input_modifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_package_details" />

    <EditText
        android:id="@+id/update_lodge_location"
        android:layout_width="@dimen/package_form_textBox_width"
        android:layout_height="@dimen/package_form_textBox_height"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_back"
        android:ems="10"
        android:hint="@string/package_label_location"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textSize="23sp"
        android:theme="@style/text_input_modifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_lodge_name" />

    <EditText
        android:id="@+id/update_package_price"
        android:layout_width="@dimen/package_form_textBox_width"
        android:layout_height="@dimen/package_form_textBox_height"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_back"
        android:ems="10"
        android:hint="@string/package_label_price"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="23sp"
        android:theme="@style/text_input_modifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_lodge_location" />

    <EditText
        android:id="@+id/update_package_contact_number"
        android:layout_width="@dimen/package_form_textBox_width"
        android:layout_height="@dimen/package_form_textBox_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_back"
        android:ems="10"
        android:hint="@string/package_contact_no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="23sp"
        android:theme="@style/text_input_modifier"
        app:layout_constraintStart_toStartOf="@+id/update_package_price"
        app:layout_constraintTop_toBottomOf="@id/update_package_price" />

    <MultiAutoCompleteTextView

        android:id="@+id/update_package_description"
        android:layout_width="@dimen/package_form_textBox_width"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_back"
        android:ems="10"
        android:paddingTop="10dp"
        android:gravity="clip_horizontal"
        android:hint="@string/package_description_placeholder"
        android:inputType="text|textMultiLine"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="23sp"
        android:theme="@style/text_input_modifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_package_contact_number" />

    <TextView
        android:id="@+id/update_package_details"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/primary_color"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="55dp"
        android:paddingTop="17dp"
        android:paddingEnd="25dp"
        android:gravity="clip_horizontal"
        android:text="@string/update_package_hint"
        android:textColor="@color/background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/sample_content_description"
        android:src="@drawable/edit_pack_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/sample_content_description"
        android:layout_marginStart="10dp"
        android:src="@drawable/drawable_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background" />

    <Button
        android:id="@+id/update_package_btn"
        android:layout_width="@dimen/package_form_btn_width"
        android:layout_height="@dimen/package_form_btn_height"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/btn_package_update"
        android:textColor="@color/primary_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/package_pic_upload" />

    <ImageView
        android:id="@+id/package_pic_upload"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/sample_content_description"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_package_description" />

</androidx.constraintlayout.widget.ConstraintLayout>